--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,20 @@
+@import url('https://fontlibrary.org//face/noto-sans-normal');
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #262421;
+  color: rgb(186, 186, 186);
+  font-family: 'Noto Sans', sans-serif;
+  height: 99vh;
 }
 
 header,
@@ -13,7 +24,7 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 7px;
+  margin: 5px;
 }
 
 ul {
@@ -30,9 +41,28 @@ li {
 
 #sign-in {
   margin-left: 40px;
+  color: rgb(54, 146, 231);
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+#main-body {
+  display: flex;
+  justify-content: center;
+  height: 88%;
+  width: 100%;
+}
+
+#main-body-container {
+  background-color: #2e2a24;
+  height: 100%;
+  width: 75%;
+  border-radius: 10px;
 }
